--- a/work/task_2/pyspark_df_words_t2.ipynb
+++ b/work/task_2/pyspark_df_words_t2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "id": "63d528b9-954e-4ea1-bb67-95202a815158",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "id": "4980968e-c6c9-494a-9f5d-b9c3c49073e5",
    "metadata": {},
    "outputs": [],
@@ -29,18 +29,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "id": "3b42fdca-7474-4386-920c-ac57b89ecee9",
    "metadata": {},
    "outputs": [],
    "source": [
     "# create spark session\n",
-    "spark = SparkSession.builder.appName(\"WordCount\").getOrCreate()"
+    "spark = SparkSession.builder.appName(\"BigramCount\").getOrCreate()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "id": "4760daa4-546b-4a49-a4a3-9aad6d287b10",
    "metadata": {
     "scrolled": true
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "id": "4b24c839-9e7d-423e-a7ee-6469cc2c28b3",
    "metadata": {},
    "outputs": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "id": "7941b38c-08d4-43fc-8a9a-f299eea4e1de",
    "metadata": {},
    "outputs": [
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "id": "49cf08d1-e9ec-46ec-8b3f-52289338ffba",
    "metadata": {},
    "outputs": [
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "id": "3df78621-7813-4683-a12a-c6ae3278edf4",
    "metadata": {},
    "outputs": [
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "id": "96a990e2-94b5-4c85-bd12-06029a8bd662",
    "metadata": {},
    "outputs": [],
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "id": "fe66ab7d-2f0e-4726-9ca6-1f2e14b644ab",
    "metadata": {},
    "outputs": [
