fixed total func, added results csv

--- a/work/task_2/pyspark_df_words_t1.ipynb
+++ b/work/task_2/pyspark_df_words_t1.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "id": "63d528b9-954e-4ea1-bb67-95202a815158",
    "metadata": {},
    "outputs": [],
    "source": [
     "# import libs\n",
-    "from pyspark.sql.functions import split, explode, regexp_replace\n",
+    "from pyspark.sql.functions import split, explode, regexp_replace, sum\n",
     "from pyspark.sql.types import StringType\n",
     "from pyspark.sql import SparkSession\n",
     "import zipfile\n",
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "4980968e-c6c9-494a-9f5d-b9c3c49073e5",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "3b42fdca-7474-4386-920c-ac57b89ecee9",
    "metadata": {},
    "outputs": [],
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "4760daa4-546b-4a49-a4a3-9aad6d287b10",
    "metadata": {
     "scrolled": true
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "id": "4b24c839-9e7d-423e-a7ee-6469cc2c28b3",
    "metadata": {},
    "outputs": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "id": "7941b38c-08d4-43fc-8a9a-f299eea4e1de",
    "metadata": {},
    "outputs": [
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 27,
    "id": "3df78621-7813-4683-a12a-c6ae3278edf4",
    "metadata": {},
    "outputs": [
@@ -167,12 +167,12 @@
     "# reduce\n",
     "word_count_df = words_df.groupBy(\"word\").count()\n",
     "word_count_df.show()\n",
-    "total_words = word_count_df.count()"
+    "total_words = word_count_df.select(sum(\"count\").alias(\"total\")).collect()[0][0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "id": "96a990e2-94b5-4c85-bd12-06029a8bd662",
    "metadata": {},
    "outputs": [],
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 28,
    "id": "fe66ab7d-2f0e-4726-9ca6-1f2e14b644ab",
    "metadata": {},
    "outputs": [
@@ -191,32 +191,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "total words: 31282\n",
+      "total words: 1347686\n",
       "word counts:\n",
-      "+----+-----+\n",
-      "|word|count|\n",
-      "+----+-----+\n",
-      "| the|49533|\n",
-      "|   i|46410|\n",
-      "| you|42288|\n",
-      "| and|29414|\n",
-      "|  to|26776|\n",
-      "|   a|26081|\n",
-      "|  me|21083|\n",
-      "|  my|19506|\n",
-      "|  it|17681|\n",
-      "|  in|17043|\n",
-      "|that|13334|\n",
-      "|  on|12703|\n",
-      "|  of|11525|\n",
-      "|your|11378|\n",
-      "| i'm|10460|\n",
-      "|like| 9765|\n",
-      "| all| 9359|\n",
-      "|  is| 9255|\n",
-      "|  be| 8663|\n",
-      "|  we| 8644|\n",
-      "+----+-----+\n",
+      "+----------+-----+\n",
+      "|      word|count|\n",
+      "+----------+-----+\n",
+      "|     still| 1828|\n",
+      "|      some| 2298|\n",
+      "|       few|  162|\n",
+      "|     spoil|   13|\n",
+      "|   lyrical|   46|\n",
+      "|   jewelry|   43|\n",
+      "|  tripping|   39|\n",
+      "|creativity|    5|\n",
+      "|     inner|   21|\n",
+      "|   familia|    6|\n",
+      "|      hope|  492|\n",
+      "|     those|  397|\n",
+      "|     trina|   14|\n",
+      "|   balding|    2|\n",
+      "|   degrade|    5|\n",
+      "|    harder|  115|\n",
+      "|   flashed|    8|\n",
+      "|       art|   44|\n",
+      "|     oscar|   12|\n",
+      "|    poetry|   13|\n",
+      "+----------+-----+\n",
       "only showing top 20 rows\n",
       "\n"
      ]
