--- a/work/task_2/pyspark_df_words_t2.ipynb
+++ b/work/task_2/pyspark_df_words_t2.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "id": "63d528b9-954e-4ea1-bb67-95202a815158",
    "metadata": {},
    "outputs": [],
    "source": [
     "# import libs\n",
-    "from pyspark.sql.functions import split, explode, concat_ws, regexp_replace, lead, col, monotonically_increasing_id\n",
+    "from pyspark.sql.functions import split, explode, concat_ws, regexp_replace, lead, col, monotonically_increasing_id, sum\n",
     "from pyspark.sql import Window\n",
     "from pyspark.sql.types import StringType\n",
     "from pyspark.sql import SparkSession\n",
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "id": "49cf08d1-e9ec-46ec-8b3f-52289338ffba",
    "metadata": {},
    "outputs": [
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "id": "3df78621-7813-4683-a12a-c6ae3278edf4",
    "metadata": {},
    "outputs": [
@@ -221,14 +221,14 @@
     "bigrams_count_df = bigrams_df.groupBy(\"bigram\") \\\n",
     "                             .count()\n",
     "\n",
-    "total_bigrams = bigrams_count_df.count()\n",
+    "total_bigrams = bigrams_count_df.select(sum(\"count\").alias(\"total\")).collect()[0][0]\n",
     "\n",
     "bigrams_count_df.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "id": "96a990e2-94b5-4c85-bd12-06029a8bd662",
    "metadata": {},
    "outputs": [],
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "id": "fe66ab7d-2f0e-4726-9ca6-1f2e14b644ab",
    "metadata": {},
    "outputs": [
@@ -247,7 +247,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "total words: 298244\n",
+      "total words: 1347685\n",
       "word counts:\n",
       "+---------+-----+\n",
       "|   bigram|count|\n",
